[JVMCI] incorrect management of JVMCI compilation failure reason string

XMLWordPrintable

    • b05

      A JVMCI compilation failure message string copied from a Java String object is assigned to CompileTask::_failure_reason. Currently, the string can be allocated in resource memory within a ResourceMark scope that is exited before the associated CompileTask is freed. CompileTask must be modified to support a C heap allocated _failure_reason.

            Assignee:
            Douglas Simon
            Reporter:
            Douglas Simon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: